# rusty-bever

./: .dockerignore  .env  .gitignore  API.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  Rb.yaml  Rocket.toml  build.rs  build.sh  diesel.toml  docker-compose.test.yml  docker-compose.yml  rustfmt.toml
.cargo/: config
blog/: .env  Cargo.toml
blog/migrations/2021-08-20-110251_users-and-auth/: up.sql
blog/migrations/2021-09-13-143540_sections/: down.sql
blog/src/: main.rs  posts.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/auth/: jwt.rs  pass.rs
common/src/db/: mod.rs  posts.rs  sections.rs
docker/: Dockerfile.builder
gw/: .env  Cargo.toml  admin.rs
gw/src/: schema.rs
migrations/2021-08-20-110251_users-and-auth/: down.sql  up.sql
migrations/2021-09-13-143540_sections/: up.sql
src/: admin.rs  auth.rs  errors.rs  guards.rs  lib.rs  main.rs  posts.rs  schema.rs  sections.rs
src/auth/: jwt.rs  mod.rs  pass.rs
src/db/: mod.rs  posts.rs  sections.rs  tokens.rs  users.rs
src/rb/: admin.rs  auth.rs  errors.rs  lib.rs  models.rs  schema.rs
src/rbs/: admin.rs  auth.rs  guards.rs  main.rs
src/routes/: admin.rs  auth.rs
tests/: admin.py
web/: package.json
web/src/: main.ts
web/src/components/: HelloWorld.vue  MirageTest.svelte  SvelteCounter.svelte
web/src/layouts/: index.astro
web/src/pages/: index.astro
web2/: package.json
web2/src/: main.ts  server.d.ts  server.js
web2/src/components/: HelloWorld.vue
