[package]
name = "rusty-bever"
version = "0.1.0"
authors = ["Jef Roosens <roosensjef@gmail.com>"]
edition = "2018"

[lib]
name = "rb"
path = "src/rb/lib.rs"

[[bin]]
name = "rbs"
path = "src/rbs/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ORM
diesel = { version = "1.4.7", features = ["postgres"] }
diesel_migrations = "1.4.0"
# To properly compile libpq statically
openssl = "0.10.36"
# For password hashing & verification
rust-argon2 = "0.8.3"
rand = "0.8.4"

# Backend web framework
[dependencies.rocket]
version = "0.5.0-rc.1"
features = [ "json" ]

# Used to (de)serialize JSON
[dependencies.serde]
version = "1.0.127"
features = ["derive"]

# Used to provide Rocket routes with database connections
[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default_features = false
features = ["diesel_postgres_pool"]
